# budget-nuggets

./: README.md  budget-nuggets.sublime-workspace  docker-compose.yaml
server/: Dockerfile  pyproject.toml
server/accounts/: models.py  views.py
server/accounts/migrations/: 0001_initial.py  0002_accountuser_delete_role_alter_account_user.py  0003_account_account_name_account_created.py  0004_remove_account_user_delete_accountuser.py
server/auth/: serializers.py  tests.py  urls.py  utils.py  views.py
server/budget/: models.py  serializers.py  tests.py  urls.py  views.py
server/budget/migrations/: 0001_initial.py  0002_budgetperiods.py  0002_rename_budget_period_category_period.py  0003_alter_budgetusers_budget.py  0004_budget_type.py  0005_budget_name_budget_owner.py  0006_rename_budgetperiods_budgetperiod_and_more.py  0007_budgetperiod_unique_budget_period.py  0008_budgetcategory.py  0009_remove_budgetcategory_budget_period_and_more.py  0010_delete_budgetcategory_delete_budgetperiod.py
server/budget/models/: __init__.py  budget.py  category.py  period.py  transaction.py
server/budget/serializers/: __init__.py  budget.py  (+2 more)
server/category/: models.py  serializers.py  tests.py  urls.py  views.py
server/config/: custom_settings_example.py  settings.py  urls.py
server/period/: apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
server/server/: custom_settings_example.py  settings.py  urls.py
server/transaction/: models.py  serializers.py  tests.py  urls.py  views.py
server/user/: models.py  tests.py  urls.py  utils.py  views.py
(+128 files in other folders)
