[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Jesudas Joseph <jesudasmjoseph@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
psycopg2 = "^2.9.5"
black = "^22.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
